--- a/scratch.css
+++ b/scratch.css
@@ -170,6 +170,23 @@ a.menu-href:hover {color: white;}
     width: 30%;
 }
 
+.detail-text {
+    margin-top: 20px;
+    background: #5b5b5b; /* Цвет фона */
+    border: solid 5px #2b2b2b;
+    font-size: 15px;
+    padding: 20px;
+    font-family: "Open Sans",Helvetica,Arial,sans-serif;
+    color: white;
+
+}
+
+.banner {
+    display: flex;
+    margin-left: 270px;
+    border: solid 5px #2b2b2b;
+    margin-top: 20px;
+}
 .cancel-btn {
     background: #757575; /* Цвет фона */
 }
@@ -177,8 +194,6 @@ a.menu-href:hover {color: white;}
 .gif {
     border: solid 10px #757575;
 }
-
-
 
 @media (max-width: 1024px)  {
     .main {
@@ -237,14 +252,30 @@ a.menu-href:hover {color: white;}
         visibility: collapse;
     }
 
+    #shop-footer {
+        margin-top: 700px;
+    }
     .games-line {
         display: block;
         flex-direction: column;
+        transform: scale(2);
+        margin-top: 600px;
     }
 
+    .news-img {
+        transform: scale(1.3);
+    }
+    .banner {
+        display: flex;
+        margin-left: 0px;
+        transform:scale(0.8);
+        border: solid 5px #2b2b2b;
+        margin-top: 20px;
+    }
     /*.game {*/
     /*    padding-top: 300px;*/
     /*    padding-bottom: 300px;*/
     /*    transform:scale(3)*/
     /*}*/
 }
+
